change : menambahkan projek

--- a/Projek.html
+++ b/Projek.html
@@ -28,6 +28,9 @@
             <li>
                 <a href="">MTK</a>
             </li>
+            <li>
+                <a href="sejarah.html">SEJARAH</a>
+            </li>
         </ul>
     </div>
     <h1>Ilmu Pengetahuan Alam & Sosial (Pipas)</h1>
