--- a/Sunda.html
+++ b/Sunda.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kotak Gambar dan Teks</title>
+    <link rel="stylesheet" href="khususprojek.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<link rel="stylesheet" href="khususprojek.css   ">
 <body>
 <script src="tombol.js"></script>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item px-3">
-                    <a class="nav-link" href="html.html">Profil</a>
+                    <a class="nav-link" href="index.html">Profil</a>
                 </li>
                 <li class="nav-item px-3">
                     <a class="nav-link" href="html2.html">Portofolio</a>
@@ -39,6 +39,9 @@
             <li>
                 <a href="">MTK</a>
             </li>
+            <li>
+                <a href="sejarah.html">SEJARAH</a>
+            </li>
         </ul>
     </div>
     <div class="container mt-5">
@@ -63,6 +66,7 @@
                     Warga Kampung Naga sorangan nyebut sajarah kampungna ku istilah "Pareum Obor". Pareum upama ditarjamahkeun kana basa Indonesia mah hartina paéh, poék. Obor hartina katerangan atawa lampu. Maksud na mah ieu patali jeung sajarah Kampung Naga.
                     <br>
                     Masarakat Kampung Naga ngalaporkeun yén ieu téh dibalukarkeun ku didurukna arsip sajarah dina waktu kajadian DI/TII. Kampung Naga nu harita leuwih ngadukung Soekarno jeung kurang simpati kana maksud DI/TII anu ngakibatkeun Kampung Naga diduruk dina taun 1956.</p>
+                    <br><br><br><br><br>
                 </div>
             </div>
             <div class="col-md-6">
