menambahkan : halaman MTK

--- a/Projek.html
+++ b/Projek.html
@@ -26,7 +26,7 @@
                 <a href="Sunda.html">SUNDA</a>
             </li>
             <li>
-                <a href="">MTK</a>
+                <a href="MTK.html">MTK</a>
             </li>
             <li>
                 <a href="sejarah.html">SEJARAH</a>
